# neural-network

./: .gitmodules  CMakeLists.txt  README.md
include/: neural_network.hpp  neuron.hpp  util.hpp
src/: main.cpp  neural_network.cpp  neuron.cpp
